# chatter

./: .dockerignore  .env  .env.example  .gitignore  Makefile  README.md  backend_run.py  frontend_run.py  pyproject.toml  pytest.ini  requirements-backend.txt  requirements-frontend.txt  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
build_python/: requirements
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml
docs/: AUTHENTICATION_GUIDE.md  AUTH_API_REFERENCE.md  DEPLOY_ALIYUN.md  DEPLOY_QUICK_REFERENCE.md  DEPLOY_WITH_DOCKER.md  DOCKER_COMPOSE_VERSION_COMPATIBILITY.md  DOCKER_TROUBLESHOOTING.md  FIX_CURL_ERROR.md  QUICKSTART.md
scripts/: README.md  backend_run.py  deploy.ps1  deploy.sh  deploy_aliyun.sh  frontend_run.py  start.sh
src/: config.py
src/backend/: database.py  dependencies.py  main.py  security.py
src/backend/api/: deps.py
src/backend/controller/: auth_controller.py  chat_controller.py  db_chat_controller.py
src/backend/domain/: exceptions.py
src/backend/manager/: context_manager.py  db_context_manager.py  model_manager.py  tool_manager.py
src/backend/models/: __init__.py  message.py  session.py  user.py
src/backend/repository/: base_repository.py  message_repository.py  session_repository.py  user_repository.py
src/backend/routes/: auth.py  chat.py  session.py
src/backend/schemas/: auth.py  session.py
src/frontend/: api_client.py  main.py  routes.py  state.py
src/frontend/components/: chat.py  (+3 more)
src/shared/: config.py  logger.py  utils.py
tests/unittest/: test_config.py  test_logger.py
(+82 files in other folders)
