[project]
name = "chatter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic[email]~=2.12.4",
    "pydantic-settings~=2.13.1",
    "python-dotenv~=1.0.0",
    "uuid~=1.30",
    "fastapi~=0.121.2",
    "sqlalchemy~=2.0.46",
    "supabase~=2.28.0",
    "dashscope~=1.25.11",
    "google~=3.0.0",
    "protobuf~=5.29.6",
    "openai~=2.8.1",
    "google-genai>=1.66.0",
    "uvicorn~=0.24.0",
    "streamlit~=1.52.1",
    "requests~=2.32.5",
    "pytest~=9.0.2",
]
